force-app/main/default/objects/Afiliacion_Electronica__c/Afiliacion_Electronica__c.object-meta.xml
<CustomObject>
    <label>Afiliacion Electronica</label>
    <nameField>
        <label>Nombre de afiliacionesElectronicas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Afiliacion Electronica</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>