force-app/main/default/objects/Afiliacion_Electronica__c/fields/Afiliado__c.field-meta.xml
<CustomField>
    <fullName>Afiliado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Afiliado</label>
    <type>Checkbox</type>
</CustomField>