force-app/main/default/objects/Afiliacion_Electronica__c/fields/Fecha_Generacion_Token__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Generacion_Token__c</fullName>
    <label>Fecha Generacion Token</label>
    <type>DateTime</type>
</CustomField>