force-app/main/default/objects/Afiliacion_Electronica__c/fields/Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Identificacion__c</fullName>
    <label>Identificacion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>