force-app/main/default/objects/Afiliacion_Electronica__c/fields/Info_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Info_Cliente__c</fullName>
    <label>Info Cliente</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>