force-app/main/default/objects/Afiliacion_Electronica__c/fields/Json_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Json_Cliente__c</fullName>
    <label>Json Cliente</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>